change body bg, add restrictions to charts

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 body {
   margin: 0;
+  height: 100vh;
+  background-color: #e9f1f9;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -92,7 +94,7 @@ body * {
   &__list{
     border: 1px solid #949ca8; 
     z-index: 1000;
-    background-color: #ffffff; 
+    background-color: #e9f1f9;
     border-radius: 5px;
     outline: none;
     position: absolute; 
